--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
     border-bottom: #777777 1px solid;
     margin-right: 12%;
 }
-h4 {
+h6 {
     color: #4aaaa5;
     text-align: left;
     margin-left: 30px;
@@ -82,6 +82,10 @@ margin: 20%;
     .navbar-brand {
         margin-left: 12%;
     }
+    .img-thumbnail {
+        margin: 0%;
+        width: 180px;
+    }
 }
 
 
@@ -139,7 +143,16 @@ margin: 20%;
         display: none;}
 
     .navbar-brand {
-        margin-left: 6%;}
+        display: inline-block;
+        padding-top: 1.9rem;
+        padding-bottom: 1.9rem;
+        margin-right: 1rem;
+        margin: 0;
+        font-size: 2rem;
+        line-height: inherit;
+        white-space: nowrap;
+        margin-left: 6%;
+    }
 
     .navbar {
         width: 96%;
@@ -163,4 +176,7 @@ margin: 20%;
         background: #4aaaa5;
         border-bottom: 0;
         }
+    .img-thumbnail {
+        margin: 0%;
+    }
 }
