--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: green;
+    background-image: url("../images/concrete_seamless.png");
     color: #777777;
     font-family: 'Georgia', Times, Times New Roman, serif;
 }
