--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,9 @@ h6 {
     text-align: left;
     margin-left: 30px;
 }
-
+p {
+    padding: 5px;
+}
 
 img{
 margin: 20%;
@@ -58,8 +60,7 @@ margin: 20%;
     border-bottom: 0;
   }
   
-
-@media (min-width: 980px) and (max-width: 1000px){
+  @media screen and (min-width: 980px) and (max-width: 1000px) {
     /*nav bar adjustment*/
     .navbar-expand-custom {
         flex-direction: row;
@@ -77,19 +78,58 @@ margin: 20%;
         display: flex!important;
     }
     .navbar-expand-custom .navbar-toggler {
-        display: none;
-    }
+        display: none;}
+
     .navbar-brand {
-        margin-left: 12%;
+        display: inline-block;
+        padding-top: 1.9rem;
+        padding-bottom: 1.9rem;
+        margin-right: 1rem;
+        margin: 0;
+        font-size: 2rem;
+        line-height: inherit;
+        white-space: nowrap;
+        margin-left: 6%;
     }
-    .img-thumbnail {
-        margin: 0%;
-        width: 180px;
+
+    .navbar {
+        width: 96%;
+    }
+
+    .container {
+        max-width: 93%;
+    }
+
+    .rounded {
+        margin: 3%;
+    }
+    .photo h3 {
+        position: absolute;
+        bottom: 15px;
+        width: 83.2%;
+        padding: 1px;
+        margin-bottom: -8px;
+        margin-left: 2.8%;
+        font-weight: 300;
+        line-height: 30px;
+        color: #ffffff;
+        text-align: center;
+        background: #4aaaa5;
+        border-bottom: 0;
+        }
+    #profile-img {
+        padding: .25rem;
+        background-color: #fff;
+        border: 1px solid #dee2e6;
+        border-radius: .25rem;
+        max-width: 50%;
+        height: auto;
+        margin: 0;
     }
 }
 
 
-@media (min-width: 768px) and (max-width: 979px){
+@media screen and (min-width: 768px) and (max-width: 979px) {
     /*nav bar adjustment*/
     .navbar-expand-custom {
         flex-direction: row;
@@ -107,16 +147,53 @@ margin: 20%;
         display: flex!important;
     }
     .navbar-expand-custom .navbar-toggler {
-        display: none;
-    }
+        display: none;}
+
     .navbar-brand {
-        margin-left: 1%;}
-    
+        display: inline-block;
+        padding-top: 1.9rem;
+        padding-bottom: 1.9rem;
+        margin-right: 1rem;
+        margin: 0;
+        font-size: 2rem;
+        line-height: inherit;
+        white-space: nowrap;
+        margin-left: 6%;
+    }
+
     .navbar {
         width: 96%;
     }
+
     .container {
         max-width: 93%;
+    }
+
+    .rounded {
+        margin: 3%;
+    }
+    .photo h3 {
+        position: absolute;
+        bottom: 15px;
+        width: 83.2%;
+        padding: 1px;
+        margin-bottom: -8px;
+        margin-left: 2.8%;
+        font-weight: 300;
+        line-height: 30px;
+        color: #ffffff;
+        text-align: center;
+        background: #4aaaa5;
+        border-bottom: 0;
+        }
+    #profile-img {
+        padding: .25rem;
+        background-color: #fff;
+        border: 1px solid #dee2e6;
+        border-radius: .25rem;
+        max-width: 50%;
+        height: auto;
+        margin: 0;
     }
 }
 
@@ -162,13 +239,16 @@ margin: 20%;
         max-width: 93%;
     }
 
+    .rounded {
+        margin: 3%;
+    }
     .photo h3 {
         position: absolute;
-        bottom: 101px;
+        bottom: 15px;
         width: 37.2%;
         padding: 10px;
         margin-bottom: 0;
-        margin-left: 18.8%;
+        margin-left: 2.8%;
         font-weight: 300;
         line-height: 30px;
         color: #ffffff;
@@ -176,7 +256,14 @@ margin: 20%;
         background: #4aaaa5;
         border-bottom: 0;
         }
-    .img-thumbnail {
-        margin: 0%;
+
+    #profile-img {
+            padding: .25rem;
+            background-color: #fff;
+            border: 1px solid #dee2e6;
+            border-radius: .25rem;
+            max-width: 100%;
+            height: auto;
+            margin: 0;
     }
 }
